# brev

./: .env  Cargo.toml  docker-compose.yml
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  sasl.rs
crates/auth/src/sasl/: plain.rs
crates/imap/: Cargo.toml
crates/imap-proto/: Cargo.toml
crates/imap-proto/src/: command.rs  flags.rs  lib.rs  recent.rs  response.rs  sequence.rs
crates/imap-proto/src/command/: capability.rs  fetch.rs  list.rs  select.rs  status.rs
crates/imap/src/: authenticate.rs  command.rs  lib.rs  protocol.rs  response.rs  sequence.rs  server.rs
crates/imap/src/protocol/: exists.rs  fetch.rs  flags.rs  list.rs  select.rs
crates/imap/src/server/: ops.rs  queue.rs  session.rs
crates/line/: Cargo.toml
crates/line/src/: lib.rs  stream.rs
crates/smtp/: Cargo.toml
crates/smtp-client/: Cargo.toml
crates/smtp-client/src/: main.rs
crates/smtp/fuzz/: Cargo.toml
crates/smtp/fuzz/fuzz_targets/: data.rs  server.rs
crates/smtp/src/: command.rs  ehlo.rs  io.rs  lib.rs  message.rs  server.rs
crates/smtp/src/message/: bdat.rs  data.rs
crates/smtp/src/server/: session.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
migrations/: 20230807090303_init.down.sql  20230807090303_init.up.sql  20230807092514_mailboxes.up.sql
src/: lib.rs  listener.rs  main.rs  operations.rs
src/operations/: create.rs  fetch.rs  list.rs  select.rs
