[package]
name = "brev"
version.workspace = true
edition = "2021"

[workspace]
members = [".", "crates/*"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
auth = { path = "crates/auth" }
email_address = { version = "0.2", default-features = false }
imap = { path = "crates/imap" }
imap-proto = { path = "crates/imap-proto" }
line = { path = "crates/line" }
futures-util = "0.3"
nom = "7.1"
rustls = "0.21"
secrecy = "0.8.0"
thiserror = "1.0"
tokio = { version = "1", default-features = false }
tokio-rustls = "0.24.1"
tokio-test = "0.4.2"
tracing = "0.1"
util = { path = "crates/util" }

[dependencies]
anyhow = "1.0.72"
async-trait.workspace = true
auth.workspace = true
dotenv = "0.15.0"
imap.workspace = true
imap-proto.workspace = true
line.workspace = true
futures-util.workspace = true
paste = "1.0"
rcgen = "0.11.1"
smtp = { path = "crates/smtp" }
tokio-rustls.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "postgres"] }
