[package]
name = "imap"
version.workspace = true
edition = "2021"

[dependencies]
auth.workspace = true
async-trait.workspace = true
base64 = "0.21"
futures-util.workspace = true
imap-proto.workspace = true
line.workspace = true
nom.workspace = true
paste = "1.0"
rustls.workspace = true
secrecy.workspace = true
strum = { version = "0.25.0", features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = [] }
tracing.workspace = true
util.workspace = true
