[package]
name = "smtp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
auth.workspace = true
email_address.workspace = true
futures-util.workspace = true
line.workspace = true
nom = "7.1.3"
thiserror = "1.0.44"
tokio = { workspace = true, default-features = false, features = [
  "io-util",
  "net",
] }
tokio-rustls.workspace = true
tracing = "0.1.37"
util.workspace = true

[dev-dependencies]
anyhow = "1.0"
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-test.workspace = true
